--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18980,6 +18980,69 @@ input[type='button'].btn-block {
   line-height: inherit !important;
   appearance: none !important;
 }
+.form__help-text {
+  margin-top: 8px !important;
+  color: #222 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-weight: 400 !important;
+}
+.form__check-input-icon {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: block !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: 2px !important;
+  margin-left: 3px !important;
+  color: #fff !important;
+}
+.form__check-input-icon {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  display: block !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: 2px !important;
+  margin-left: 3px !important;
+  color: #fff !important;
+}
+.form__check-input-icon-wrapper {
+  display: inline-block !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  height: 24px !important;
+  width: 24px !important;
+  text-align: center !important;
+  overflow: hidden !important;
+  vertical-align: top !important;
+  border-radius: 4px !important;
+  background: #222 !important;
+  color: #fff !important;
+  border-color: #222 !important;
+}
+.form-floating__control {
+  position: relative !important;
+  flex: 1 1 auto !important;
+  padding: 0 !important;
+}
+.form__switch-label {
+  padding-top: 4px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 400 !important;
+  color: #717171 !important;
+}
 
 /*! HERO BANNER */
 .hero-banner {
