--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -23517,3 +23517,191 @@ input[type='button'].btn-block {
   margin-bottom: 16px !important;
   width: 31% !important;
 }
+
+/*! STICKY HEADER COMPONENT */
+.sticky-header {
+  box-shadow: rgb(0 0 0 / 10%) 0 1px 0 !important;
+  background-color: #fff !important;
+  position: fixed !important;
+  left: 0 !important;
+  right: 0 !important;
+  top: 0 !important;
+  z-index: 3 !important;
+  animation-name: keyframe_1b8bzh6 !important;
+  animation-duration: 0.1s !important;
+}
+@media (min-width: 744px) {
+  .sticky-header {
+    height: var(--navigation-bar-offset, 80px) !important;
+  }
+}
+.sticky-header__left {
+  color: #717171 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 20px !important;
+}
+@media (min-width: 744px) {
+  .sticky-header__left {
+    white-space: nowrap !important;
+    overflow: hidden !important;
+  }
+}
+.sticky-header__nav {
+  display: inline-block !important;
+  white-space: nowrap !important;
+}
+.sticky-header__nav-item {
+  display: inline-block !important;
+  margin-right: 24px !important;
+}
+.sticky-header__nav-link-text {
+  color: #222 !important;
+  font-weight: 600 !important;
+  padding: 30px 0 !important;
+  display: inline-block !important;
+  text-decoration: none !important;
+  position: relative !important;
+}
+.sticky-header__nav-link-text::after {
+  background-color: #222 !important;
+  content: '' !important;
+  display: block !important;
+  bottom: 0 !important;
+  height: 4px !important;
+  opacity: 0 !important;
+  position: absolute !important;
+  transition: opacity 0.15s !important;
+  width: 100% !important;
+}
+.sticky-header__right {
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  display: flex !important;
+  position: absolute !important;
+  right: 0 !important;
+  transform: translateY(-50%) !important;
+  background-color: #fff !important;
+}
+.sticky-header__action {
+  white-space: nowrap !important;
+  display: block !important;
+  margin-left: 40px !important;
+}
+.sticky-header__action-inner {
+  -webkit-box-align: center !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  padding-top: 16px !important;
+  padding-bottom: 16px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+.sticky-header__action-left {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-align: start !important;
+  align-items: flex-start !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  margin-right: 16px !important;
+}
+.sticky-header__action-subtitle {
+  margin-top: 4px !important;
+}
+.sticky-header__action-subtitle-inner {
+  -webkit-box-align: baseline !important;
+  align-items: baseline !important;
+  display: flex !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
+.sticky-header__action-icon {
+  text-align: center !important;
+  color: var(--dls19-brand-color) !important;
+}
+.sticky-header__action-subtitle-text {
+  color: #222 !important;
+  padding-left: 4px !important;
+  font-weight: 600 !important;
+}
+.sticky-header__action-title {
+  -webkit-box-align: var(
+    --pricing-guest-display-price-alignment,
+    flex-start
+  ) !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: var(
+    --pricing-guest-display-price-alignment,
+    flex-start
+  ) !important;
+}
+.sticky-header__action-title-inner {
+  font-size: var(--pricing-guest-primary-line-font-size, 16px) !important;
+  line-height: var(--pricing-guest-primary-line-line-height, 20px) !important;
+  overflow: var(--pricing-guest-primary-line-overflow, initial) !important;
+  white-space: var(
+    --pricing-guest-primary-line-white-space,
+    inherit
+  ) !important;
+}
+.sticky-header__action-title-text {
+  -webkit-box-pack: var(
+    --pricing-guest-display-price-alignment,
+    flex-start
+  ) !important;
+  -webkit-box-align: baseline !important;
+  align-items: baseline !important;
+  color: #222 !important;
+  display: flex !important;
+  font-weight: 400 !important;
+  justify-content: var(
+    --pricing-guest-display-price-alignment,
+    flex-start
+  ) !important;
+  flex-wrap: var(--pricing-guest-display-price-flex-wrap, wrap) !important;
+}
+.sticky-header__action-text-highlighted {
+  font-weight: var(
+    --pricing-guest-primary-line-unit-price-font-weight,
+    800
+  ) !important;
+}
+.sticky-header__action-text {
+  white-space: nowrap !important;
+  font-weight: 400 !important;
+  font-size: var(
+    --pricing-guest-primary-line-qualifier-font-size,
+    14px
+  ) !important;
+  line-height: var(
+    --pricing-guest-primary-line-qualifier-line-height,
+    18px
+  ) !important;
+  min-width: var(
+    --pricing-guest-primary-line-qualifier-min-width,
+    initial
+  ) !important;
+  overflow: var(
+    --pricing-guest-primary-line-qualifier-overflow,
+    initial
+  ) !important;
+  text-overflow: var(
+    --pricing-guest-primary-line-qualifier-text-overflow,
+    initial
+  ) !important;
+}
+.sticky-header__nav-link-text:hover::after {
+  opacity: 1 !important;
+}
