--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22656,6 +22656,29 @@ input[type='button'].btn-block {
     transition: none !important;
   }
 }
+.tab {
+  overflow-y: auto !important;
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+  margin-left: -12px !important;
+  margin-right: -12px !important;
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
+}
+.tab::-webkit-scrollbar {
+  display: none !important;
+}
+.tab {
+  overflow-y: auto !important;
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+  margin-left: -12px !important;
+  margin-right: -12px !important;
+}
+.tab__hr {
+  height: 1px !important;
+  background-color: #ddd !important;
+}
 
 /*! TOOLTIP COMPONENT */
 .tooltip {
