--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24070,3 +24070,148 @@ input[type='button'].btn-block {
 .gallery-modal__thumb-btn:hover {
   opacity: 1 !important;
 }
+
+/*! MOBILE CAROUSEL COMPONENT */
+.mobile-carousel__controls {
+  -webkit-box-pack: justify !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  margin-left: calc(2% + 19px) !important;
+  margin-right: calc(2% + 19px) !important;
+}
+.mobile-carousel__btn-wrapper {
+  pointer-events: all !important;
+  transition: opacity 0.2s !important;
+}
+.mobile-carousel {
+  position: relative !important;
+  width: 100% !important;
+  z-index: 0 !important;
+  padding-top: 66.6667% !important;
+}
+.mobile-carousel__wrapper {
+  position: absolute !important;
+  top: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+.mobile-carousel {
+  position: relative !important;
+  width: 100% !important;
+  z-index: 0 !important;
+  padding-top: var(--dls-basecard-padding-top) !important;
+}
+.mobile-carousel__wrapper {
+  position: absolute !important;
+  inset: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+.mobile-carousel__dots {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  align-items: flex-end !important;
+  display: flex !important;
+  justify-content: center !important;
+  list-style-type: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+}
+.mobile-carousel__overlay-top {
+  margin-top: auto !important;
+  padding-top: 60px !important;
+}
+.mobile-carousel__btn {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  color: #222 !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: 0 0 !important;
+  transition: -ms-transform 0.25s, -webkit-transform 0.25s, transform 0.25s !important;
+}
+.mobile-carousel__overlay-bottom {
+  margin-top: auto !important;
+  height: 60px !important;
+  width: 100% !important;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0) 30%,
+    rgba(22, 22, 22, 0.3) 100%
+  ) !important;
+}
+.mobile-carousel__dots-wrapper {
+  display: flex !important;
+  overflow: hidden !important;
+  padding-bottom: 12px !important;
+  max-width: 40px !important;
+}
+@supports (overflow: clip) {
+  .mobile-carousel__dots-wrapper {
+    overflow: clip !important;
+  }
+}
+.mobile-carousel__dot {
+  background: #fff !important;
+  border-radius: 50% !important;
+  height: 4px !important;
+  margin-left: 2px !important;
+  margin-right: 2px !important;
+  min-width: 4px !important;
+  opacity: 0.6 !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+  width: 4px !important;
+}
+.mobile-carousel__dot-active {
+  background: #fff !important;
+  border-radius: 50% !important;
+  height: 4px !important;
+  margin-left: 2px !important;
+  margin-right: 2px !important;
+  min-width: 4px !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+  width: 4px !important;
+  opacity: 1 !important;
+}
+.mobile-carousel__btn::before {
+  content: '' !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+  background: #fff !important;
+  box-shadow: rgba(0, 0, 0, 0.18) 0 1px 2px, rgba(0, 0, 0, 0.18) 0 2px 4px !important;
+}
+.mobile-carousel__btn::after {
+  content: '' !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 48px !important;
+  height: 48px !important;
+}
+.mobile-carousel__slide {
+  border-style: solid !important;
+  border-color: transparent !important;
+  scroll-snap-align: start !important;
+  scroll-snap-stop: always !important;
+  flex: 0 0 100% !important;
+  max-width: 100% !important;
+}
