--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24215,3 +24215,26 @@ input[type='button'].btn-block {
   flex: 0 0 100% !important;
   max-width: 100% !important;
 }
+
+/*! ICON CARD */
+.icon-card {
+  -webkit-box-pack: justify !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  border: 1px solid #ddd !important;
+  border-radius: 12px !important;
+  padding: 24px 16px !important;
+  height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: space-between !important;
+  overflow-wrap: anywhere !important;
+  min-height: 0 !important;
+}
+.icon-card__title {
+  font-size: 18px !important;
+  line-height: 24px !important;
+  overflow-wrap: anywhere !important;
+  font-weight: 600 !important;
+  margin-bottom: 8px !important;
+}
