--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24238,3 +24238,20 @@ input[type='button'].btn-block {
   font-weight: 600 !important;
   margin-bottom: 8px !important;
 }
+
+/*! LIGHTBOX COMPONENT */
+.lightbox__counter {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  color: #fff !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  align-items: center !important;
+  inset: 0px !important;
+  display: flex !important;
+  justify-content: center !important;
+  position: absolute !important;
+}
