--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24255,3 +24255,130 @@ input[type='button'].btn-block {
   justify-content: center !important;
   position: absolute !important;
 }
+
+/*! REVIEWS RATE COMPONENT */
+@media (min-width: 744px) {
+  .reviews-rate__wrapper {
+    width: 41.66666666666667% !important;
+    margin-right: 8.333333333333332% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1440px) {
+  .reviews-rate__wrapper {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+.reviews-rate[class][class] {
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+  width: calc(100% + var(--spacer-4));
+}
+@media (min-width: 744px) {
+  .reviews-rate[class][class] {
+    width: calc(100% + var(--spacer-5));
+  }
+}
+.dir.reviews-rate[class][class] {
+  margin-left: calc(-1 * var(--spacer-4) / 2);
+  margin-right: calc(-1 * var(--spacer-4) / 2);
+}
+@media (min-width: 744px) {
+  .dir.reviews-rate[class][class] {
+    margin-left: calc(-1 * var(--spacer-5) / 2);
+    margin-right: calc(-1 * var(--spacer-5) / 2);
+  }
+}
+.reviews-rate__wrapper {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+}
+@media (min-width: 375px) {
+  .reviews-rate__wrapper {
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+  }
+}
+@media (min-width: 744px) {
+  .reviews-rate__wrapper {
+    width: 41.6667% !important;
+    margin-right: 8.33333% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 950px) {
+  .reviews-rate__wrapper {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+@media (min-width: 1128px) {
+  .reviews-rate__wrapper {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
+.reviews-rate__body {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  width: 100% !important;
+}
+.reviews-rate__title {
+  width: 100% !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+}
+.reviews-rate__rate {
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  margin-left: 12px !important;
+  width: 75% !important;
+}
+@media (min-width: 1128px) {
+  .reviews-rate__rate {
+    width: 50% !important;
+  }
+}
+.reviews-rate__bar-wrapper {
+  position: relative !important;
+  height: 4px !important;
+  width: 100% !important;
+  margin-right: 4px !important;
+  background: #ddd !important;
+  border-radius: 2px !important;
+}
+.reviews-rate__bar {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  bottom: 0 !important;
+  background: var(--dls19-ui-brand-color) !important;
+  border-radius: 2px !important;
+}
+.reviews-rate__count {
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  margin-left: 6px !important;
+}
