--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14068,6 +14068,67 @@ html :where(img[class*='wp-image-']) {
     vertical-align: baseline;
   }
 }
+.alert-animation {
+  animation-duration: 0.5s !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  font-size: 0 !important;
+  animation-name: keyframe_1sh8tyy !important;
+}
+.alert-danger {
+  display: inline-flex !important;
+  contain: layout !important;
+  border: 1px solid #ddd !important;
+  background-color: #fff !important;
+  border-radius: 12px !important;
+  padding: 16px !important;
+  max-width: none !important;
+  box-shadow: rgb(0 0 0 / 20%) 0 6px 20px !important;
+}
+.alert__title {
+  color: #222 !important;
+  font-weight: 800 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+.alert__text {
+  margin-top: 4px !important;
+  color: #717171 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+.alert-danger-bordered {
+  background-color: #fff !important;
+  border-width: 8px 1px 1px !important;
+  border-style: solid !important;
+  border-color: #c13515 #ddd #ddd !important;
+  border-image: initial !important;
+  border-radius: 8px !important;
+  bottom: 16px !important;
+  box-shadow: rgb(0 0 0 / 20%) 0 6px 20px !important;
+  display: flex !important;
+  left: 16px !important;
+  min-height: 100px !important;
+  padding: 12px 16px 20px !important;
+  right: 16px !important;
+  z-index: 2001 !important;
+  position: static !important;
+  margin: 16px 0 !important;
+}
+@media (min-width: 744px) {
+  .alert-danger-bordered {
+    box-shadow: rgb(0 0 0 / 18%) 0 2px 4px !important;
+    position: static !important;
+    margin: 16px 0 !important;
+  }
+}
+.alert__body {
+  flex: 1 1 auto !important;
+}
+.alert__icon {
+  flex: 0 0 auto !important;
+  margin-right: 8px !important;
+}
 
 /*! BUTTON COMPONENTS */
 .btn-primary:focus-visible {
