--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13892,6 +13892,53 @@ html :where(img[class*='wp-image-']) {
     grid-auto-rows: minmax(0, 1fr);
   }
 }
+.card__title {
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  margin-top: 16px !important;
+}
+.card__text {
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  margin-top: 4px !important;
+}
+.card__media-container {
+  position: absolute !important;
+  top: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+.card__lite-image-title {
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 0.875rem !important;
+  line-height: 1.125rem !important;
+  margin-top: 0.75rem !important;
+}
+@media (min-width: 744px) {
+  .card__lite-image-title {
+    color: #222 !important;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+      Helvetica Neue, sans-serif !important;
+    font-weight: 400 !important;
+    font-size: 1rem !important;
+    line-height: 1.25rem !important;
+    margin-top: 1rem !important;
+  }
+}
 
 /*! NEWS CARD COMPONENT */
 .news-card {
