--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14231,6 +14231,49 @@ html :where(img[class*='wp-image-']) {
   }
 }
 
+/*! HORIZONTAL CARD DARK */
+.horizontal-card-dark {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: var(--line-height-md) !important;
+  font-weight: var(--font-weight-semibold) !important;
+  border-radius: 12px !important;
+  outline: 0 !important;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  padding: 16px !important;
+  width: 100% !important;
+  text-align: start !important;
+  border: 1px solid transparent !important;
+  background: #222 !important;
+  color: #fff !important;
+  height: 100% !important;
+}
+.horizontal-card-dark__img {
+  margin-left: 0 !important;
+  margin-right: 16px !important;
+}
+.horizontal-card-dark__title {
+  color: #fff !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+.horizontal-card-dark__text {
+  margin-top: 4px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: #fff !important;
+  font-weight: 400 !important;
+}
+
 /*! ALERT COMPONENT */
 .alert .btn-primary {
   border-color: #007a87;
