--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5368,6 +5368,120 @@ html :where(img[class*='wp-image-']) {
     line-height: 2.25rem !important;
   }
 }
+.my-8 {
+  margin-top: 32px !important;
+  margin-bottom: 32px !important;
+}
+.mb-8 {
+  margin-bottom: 32px !important;
+}
+.flex-0-auto {
+  -webkit-flex: 0 0 auto !important;
+  -ms-flex: 0 0 auto !important;
+  flex: 0 0 auto !important;
+}
+.carousel-scroll-snap {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  height: 100% !important;
+  list-style: none !important;
+  overflow-x: auto !important;
+  overflow-y: hidden !important;
+  padding-left: 0 !important;
+  -webkit-overflow-scrolling: touch !important;
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+  min-width: 100% !important;
+  -webkit-scroll-snap-type: x mandatory !important;
+  -ms-scroll-snap-type: x mandatory !important;
+  scroll-snap-type: x mandatory !important;
+}
+.carousel-scroll-snap::-webkit-scrollbar {
+  display: none !important;
+}
+@supports (overflow: clip) {
+  .carousel-scroll-snap {
+    overflow-x: auto !important;
+    overflow-y: clip !important;
+  }
+}
+.image-container {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+.h-full {
+  height: 100% !important;
+}
+.overlay {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+.carousel-scroll-snap {
+  display: flex !important;
+  height: 100% !important;
+  list-style: none !important;
+  overflow: auto hidden !important;
+  padding-left: 0 !important;
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+  min-width: 100% !important;
+  scroll-snap-type: x mandatory !important;
+}
+@supports (overflow: clip) {
+  .carousel-scroll-snap {
+    overflow: auto clip !important;
+  }
+}
+.grid {
+  display: grid !important;
+}
+.pb-4 {
+  padding-bottom: 16px !important;
+}
+.pb-24 {
+  padding-bottom: 24px !important;
+}
+.mb-10 {
+  margin-bottom: 40px !important;
+}
+.mt-9 {
+  margin-top: 36px !important;
+}
+.mt-6 {
+  margin-top: 24px !important;
+}
+.mt-2 {
+  margin-top: 8px !important;
+}
+.mt-4 {
+  margin-top: 16px !important;
+}
+.ml-2 {
+  margin-left: 8px !important;
+}
+.mr-2 {
+  margin-right: 8px !important;
+}
+.pt-2 {
+  padding-top: 8px !important;
+}
+.py-12 {
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
+}
+.my-0 {
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+}
 
 /*! FOOTER COMPONENT */
 .footer__links:not(last-child) {
