--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18633,6 +18633,60 @@ input[type='button'].btn-block {
   background: #fff !important;
   border: 1.5px solid #222 !important;
 }
+.calendar__day-month-header {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  text-align: center !important;
+  padding-top: 22px !important;
+  padding-bottom: 49px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 600 !important;
+}
+.calendar__day-text {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(255, 255, 255) !important;
+}
+.calendar__day-text:hover {
+  background: rgb(255, 255, 255) !important;
+  border: 1.5px solid rgb(34, 34, 34) !important;
+}
+.calendar__day-off-text {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  border: 1.5px solid rgb(255, 255, 255) !important;
+  color: rgb(72, 72, 72) !important;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  opacity: 0.25 !important;
+}
 
 /*! COUNTER LARGE COMPONENT */
 .counter-lg {
