--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2453,6 +2453,7 @@
   --font-weight-bold: 800;
   --gray-900: #222222;
   --border-radius: 8px;
+  --gradient-alt-7: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   :root {
