--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62250,7 +62250,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --primary-color: #ff385c;
   --kd-lqtg: #92174d;
   --d-u-w-o-m-k: #460479;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-7: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
   --d-e-vybb: radial-gradient(
     circle at center,
     #ff385c 0%,
