--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -56263,7 +56263,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   left: 0;
 }
 .dir.l1d1x245[class][class] {
-  border-radius: var(--i-g-gvoq);
+  border-radius: var(--border-radius-lg);
 }
 .l1d1x245[class][class] {
   display: block;
@@ -62710,7 +62710,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .dir.c1ixqffw[class][class] {
   background: var(--white);
-  border-radius: var(--i-g-gvoq);
+  border-radius: var(--border-radius-lg);
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.12);
   margin-top: 34px;
   padding: 8px 0;
@@ -63434,7 +63434,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   outline: 0;
 }
 .dir.ln2bl2p[class][class] {
-  border-radius: var(--card-container_border-radius, var(--i-g-gvoq));
+  border-radius: var(--card-container_border-radius, var(--border-radius-lg));
 }
 .dir-ltr.ln2bl2p[class][class] {
   left: 0;
@@ -63742,8 +63742,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .dir.o1s954ha[class][class] {
-  border-bottom-left-radius: var(--h-l-f-om-o);
-  border-bottom-right-radius: var(--h-l-f-om-o);
+  border-bottom-left-radius: var(--border-radius-sm);
+  border-bottom-right-radius: var(--border-radius-sm);
 }
 .dir-ltr.o1s954ha[class][class] {
   background: linear-gradient(180deg, transparent 80%, rgba(0, 0, 0, 0.25));
