--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62748,7 +62748,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .dir.crawnjq[class][class]:hover {
-  box-shadow: var(--e-swdx-p);
+  box-shadow: var(--box-shadow-alt-3);
 }
 .b10s36so[class][class] {
   position: absolute;
@@ -63319,7 +63319,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .dir.s1f23tw1[class][class] {
   background: var(--white);
-  box-shadow: var(--cizosd);
+  box-shadow: var(--box-shadow-alt-2);
   border-radius: var(--border-radius);
   transition: opacity 0.3s linear;
 }
