--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63408,10 +63408,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .c5i5p7w[class][class] {
-  -webkit-transition: -webkit-transform 250ms var(--bd-d-m-c-q);
+  -webkit-transition: -webkit-transform 250ms var(--timing-function-alt-1);
 }
 .dir.c5i5p7w[class][class] {
-  transition: transform 250ms var(--bd-d-m-c-q);
+  transition: transform 250ms var(--timing-function-alt-1);
 }
 .dir.pgtll9r[class][class] {
   background-color: var(--pin-background-color, #febf46);
