--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62550,7 +62550,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   outline: 0;
 }
 .dir.c1b2ssu5[class][class]:hover:not(:active) {
-  background-color: var(---pc-g-v-g);
+  background-color: var(--gray-100);
 }
 .dir.c1b2ssu5[class][class]:focus-visible {
   transition: box-shadow 0.2s;
@@ -62598,7 +62598,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .a90wtny[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
   display: inline-block;
   flex: 0 0 auto;
   font-weight: var(--e-y-j-d-v-j);
@@ -62653,7 +62653,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   outline: 0;
 }
 .dir.c1iyjvyv[class][class]:hover:not(:active) {
-  background-color: var(---pc-g-v-g);
+  background-color: var(--gray-100);
 }
 .dir.c1iyjvyv[class][class]:focus-visible {
   transition: box-shadow 0.2s;
@@ -62776,7 +62776,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .fp36fst[class][class] {
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
   flex: 0 0 30px;
   height: 30px;
   overflow: hidden;
@@ -63020,7 +63020,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 1px;
 }
 .dir.d1trgdqu[class][class] {
-  background-color: var(--iw-ihca);
+  background-color: var(--gray-400);
   margin-inline: 20px 4px;
 }
 @media (min-width: 744px) {
@@ -63213,7 +63213,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   height: var(--gp-placement-max-height, 'auto');
 }
 .dir.c12zlp1w[class][class] {
-  background-color: var(--k-va-tnc);
+  background-color: var(--danger-color);
 }
 .c153at8g[class][class] {
   display: grid;
@@ -63347,7 +63347,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   opacity: 0.1;
 }
 .dir.c1fisx1o[class][class] {
-  background: var(--bgxgx);
+  background: var(--black);
 }
 .cley8gd[class][class] {
   outline: 0;
@@ -63507,7 +63507,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
   flex: 1 0 0%;
   white-space: break-spaces;
 }
@@ -63540,7 +63540,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transition: none;
 }
 .dir.ctbkggg[class][class]:hover {
-  background-color: var(---pc-g-v-g);
+  background-color: var(--gray-100);
 }
 @keyframes animate-map-control-fade-in-f2vzbpl {
   from {
@@ -63845,7 +63845,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
 }
 .dir-ltr.mj1p6c8[class][class] {
   margin-right: 3px;
