--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18358,7 +18358,7 @@ input[type='button'].btn-block {
 .dir.btn-light-outlined-sm[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--white), 0 0 0 4px var(--gray-900);
-  background-color: var(---pc-g-v-g);
+  background-color: var(--gray-100);
   border: 2px solid var(--gray-900);
 }
 .dir.btn-light-outlined-sm[class][class]:focus-visible::-moz-focus-inner {
@@ -18383,7 +18383,7 @@ input[type='button'].btn-block {
 .dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added] {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--white), 0 0 0 4px var(--gray-900);
-  background-color: var(---pc-g-v-g);
+  background-color: var(--gray-100);
   border: 2px solid var(--gray-900);
 }
 .dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added]::-moz-focus-inner {
