--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -56341,7 +56341,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   word-break: break-all;
 }
 .dir.pzfo4tk[class][class] {
-  margin-top: var(--h-x-sf-jw);
+  margin-top: var(--spacer-2);
 }
 .visually-hidden[class][class] {
   -webkit-clip: rect(0 0 0 0);
@@ -62223,25 +62223,25 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: none;
 }
 .dir.p1lc3mon[class][class] {
-  -webkit-padding-start: var(--ikx-k-pe);
-  padding-inline-start: var(--ikx-k-pe);
-  -webkit-padding-end: var(--ikx-k-pe);
-  padding-inline-end: var(--ikx-k-pe);
+  -webkit-padding-start: var(--spacer-6);
+  padding-inline-start: var(--spacer-6);
+  -webkit-padding-end: var(--spacer-6);
+  padding-inline-end: var(--spacer-6);
 }
 @media (min-width: 744px) {
   .dir.p1lc3mon[class][class] {
-    -webkit-padding-start: var(--f-fw-z-a-i);
-    padding-inline-start: var(--f-fw-z-a-i);
-    -webkit-padding-end: var(--f-fw-z-a-i);
-    padding-inline-end: var(--f-fw-z-a-i);
+    -webkit-padding-start: var(--spacer-8);
+    padding-inline-start: var(--spacer-8);
+    -webkit-padding-end: var(--spacer-8);
+    padding-inline-end: var(--spacer-8);
   }
 }
 @media (min-width: 950px) {
   .dir.p1lc3mon[class][class] {
-    -webkit-padding-start: var(--ikx-k-pe);
-    padding-inline-start: var(--ikx-k-pe);
-    -webkit-padding-end: var(--ikx-k-pe);
-    padding-inline-end: var(--ikx-k-pe);
+    -webkit-padding-start: var(--spacer-6);
+    padding-inline-start: var(--spacer-6);
+    -webkit-padding-end: var(--spacer-6);
+    padding-inline-end: var(--spacer-6);
   }
 }
 .fhusglq[class][class] {
@@ -62604,7 +62604,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: var(--e-y-j-d-v-j);
 }
 .dir-ltr.a90wtny[class][class] {
-  margin-left: var(--jaa-ni-h);
+  margin-left: var(--spacer-5);
 }
 .c1iyjvyv[class][class] {
   -webkit-appearance: none;
@@ -62888,7 +62888,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     --chipsbar_separator-height: 32px;
     display: grid;
     flex: 0 0 auto;
-    min-width: calc(48px + var(--ikx-k-pe));
+    min-width: calc(48px + var(--spacer-6));
     place-items: center;
     position: relative;
   }
@@ -62961,11 +62961,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex-direction: column;
   align-items: center;
   padding-block: 18px 16px;
-  gap: var(--h-x-sf-jw);
+  gap: var(--spacer-2);
 }
 @media (min-width: 744px) {
   .c6db4u2[class][class] {
-    gap: var(--fgg-f-l-a);
+    gap: var(--spacer-3);
     -webkit-padding-after: 12px;
     padding-block-end: 12px;
   }
@@ -63001,11 +63001,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex-direction: column;
   align-items: center;
   min-width: var(--chipsbar_chip-width);
-  gap: var(--h-x-sf-jw);
+  gap: var(--spacer-2);
 }
 @media (min-width: 744px) {
   .c1m2z0bj[class][class] {
-    gap: var(--fgg-f-l-a);
+    gap: var(--spacer-3);
   }
 }
 .t1h65ots[class][class] {
@@ -63037,8 +63037,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center;
 }
 .dir.c1aasoj4[class][class] {
-  margin-top: var(--ikx-k-pe);
-  margin-bottom: var(--fgg-f-l-a);
+  margin-top: var(--spacer-6);
+  margin-bottom: var(--spacer-3);
 }
 .to8eev7[class][class] {
   font-size: var(--font-size-sm);
@@ -63048,20 +63048,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .t16kra9o[class][class] {
   display: flex;
   flex-direction: column;
-  gap: var(--h-x-sf-jw);
+  gap: var(--spacer-2);
 }
 .c61fd4t[class][class] {
-  -webkit-margin-before: var(--ikx-k-pe);
-  margin-block-start: var(--ikx-k-pe);
-  -webkit-margin-after: var(--ikx-k-pe);
-  margin-block-end: var(--ikx-k-pe);
+  -webkit-margin-before: var(--spacer-6);
+  margin-block-start: var(--spacer-6);
+  -webkit-margin-after: var(--spacer-6);
+  margin-block-end: var(--spacer-6);
 }
 @media (min-width: 1128px) {
   .c61fd4t[class][class] {
-    -webkit-margin-before: var(--fgg-f-l-a);
-    margin-block-start: var(--fgg-f-l-a);
-    -webkit-margin-after: var(--kksqe-v);
-    margin-block-end: var(--kksqe-v);
+    -webkit-margin-before: var(--spacer-3);
+    margin-block-start: var(--spacer-3);
+    -webkit-margin-after: var(--spacer-7);
+    margin-block-end: var(--spacer-7);
   }
 }
 .c1885bm1[class][class] {
@@ -63072,18 +63072,18 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 @media (min-width: 744px) {
   .c1885bm1[class][class] {
-    -webkit-margin-before: var(--jhzm-v-t);
-    margin-block-start: var(--jhzm-v-t);
-    -webkit-margin-after: var(--f-fw-z-a-i);
-    margin-block-end: var(--f-fw-z-a-i);
+    -webkit-margin-before: var(--spacer-5);
+    margin-block-start: var(--spacer-5);
+    -webkit-margin-after: var(--spacer-8);
+    margin-block-end: var(--spacer-8);
   }
 }
 @media (min-width: 1128px) {
   .c1885bm1[class][class] {
-    -webkit-margin-before: var(--jhzm-v-t);
-    margin-block-start: var(--jhzm-v-t);
-    -webkit-margin-after: var(--f-fw-z-a-i);
-    margin-block-end: var(--f-fw-z-a-i);
+    -webkit-margin-before: var(--spacer-5);
+    margin-block-start: var(--spacer-5);
+    -webkit-margin-after: var(--spacer-8);
+    margin-block-end: var(--spacer-8);
   }
 }
 @keyframes fade-in-f1rivgsm {
@@ -63098,7 +63098,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --dls-shimmer-animation: none;
 }
 .g1wiliwt[class][class] {
-  --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
+  --card-content-grid_gap: var(--spacer-1) var(--spacer-3);
   --card-content-grid_template-columns: minmax(0, 1fr) 15%;
 }
 .m1cp3yuo[class][class] {
@@ -63107,7 +63107,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --aspect_ratio_wrapper-position_fallback: relative;
 }
 .dir.m1cp3yuo[class][class] {
-  margin-bottom: var(--b-y-unon);
+  margin-bottom: var(--spacer-4);
 }
 .a3g92ry[class][class] {
   grid-column: -2/-1;
@@ -63122,8 +63122,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 6px;
 }
 .giajdwt[class][class] {
-  --breakpoint-grid_column-gap: var(--ikx-k-pe);
-  --breakpoint-grid_row-gap: var(--f-fw-z-a-i);
+  --breakpoint-grid_column-gap: var(--spacer-6);
+  --breakpoint-grid_row-gap: var(--spacer-8);
 }
 @media (min-width: 744px) {
   .giajdwt[class][class] {
@@ -63168,7 +63168,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --card-layout_flex-direction: column-reverse;
 }
 .g1qv1ctd[class][class] {
-  --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
+  --card-content-grid_gap: var(--spacer-1) var(--spacer-3);
   font-size: 15px;
   line-height: 19px;
 }
@@ -63178,7 +63178,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --aspect_ratio_wrapper-position_fallback: relative;
 }
 .dir.m1v28t5c[class][class] {
-  margin-bottom: var(--b-y-unon);
+  margin-bottom: var(--spacer-4);
 }
 .nquyp1l[class][class] {
   grid-column: 1/-1;
@@ -63218,8 +63218,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .c153at8g[class][class] {
   display: grid;
   grid-auto-flow: column;
-  grid-gap: var(--jaa-ni-h);
-  gap: var(--jaa-ni-h);
+  grid-gap: var(--spacer-5);
+  gap: var(--spacer-5);
 }
 .trsceko[class][class] {
   top: 24px;
@@ -63233,7 +63233,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: var(--font-weight-semibold);
 }
 .dir-ltr.l1pncren[class][class] {
-  padding-left: var(--h-x-sf-jw);
+  padding-left: var(--spacer-2);
 }
 .l177lde9[class][class] {
   max-width: 150px;
@@ -63268,10 +63268,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: calc(40% - 2.8px);
 }
 .dir-ltr.s1iuhvj[class][class] {
-  margin-left: var(--h-x-sf-jw);
+  margin-left: var(--spacer-2);
 }
 .dir.s48kaap[class][class]:last-child {
-  margin-top: var(--h-x-sf-jw);
+  margin-top: var(--spacer-2);
 }
 .cp0pqp0[class][class] {
   --contentscroller_contain: layout paint size style;
@@ -63472,8 +63472,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .cb4nyux[class][class] {
   display: grid;
-  grid-gap: var(--card-content-grid_gap, var(--h-x-sf-jw));
-  gap: var(--card-content-grid_gap, var(--h-x-sf-jw));
+  grid-gap: var(--card-content-grid_gap, var(--spacer-2));
+  gap: var(--card-content-grid_gap, var(--spacer-2));
   grid-template-columns: var(
     --card-content-grid_template-columns,
     minmax(0, 1fr) -webkit-max-content
@@ -63718,7 +63718,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   height: 100%;
 }
 .dir-ltr.n1a3583r[class][class] {
-  right: var(--fgg-f-l-a);
+  right: var(--spacer-3);
 }
 .ni7lfv1[class][class] {
   opacity: 1;
@@ -64552,7 +64552,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .dir-ltr.cob9xum[class][class] {
   margin-left: var(--carousel-wrapper-margin, 0);
-  margin-right: calc(-1 * var(--ic-zlb-s));
+  margin-right: calc(-1 * var(--spacer-6));
 }
 .dir.cob9xum[class][class] {
   margin-bottom: var(--carousel-wrapper-margin, 0);
@@ -64565,7 +64565,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 @media (min-width: 375px) {
   .dir-ltr.cob9xum[class][class] {
-    margin-right: calc(-1 * var(--ic-zlb-s));
+    margin-right: calc(-1 * var(--spacer-6));
   }
 }
 .gkbbbvk[class][class] {
